--- a/src/app/pages/support/support-form/support-form.component.html
+++ b/src/app/pages/support/support-form/support-form.component.html
@@ -1,5 +1,10 @@
+<ion-fab vertical="top" horizontal="start" slot="absolute" (click)="dismiss()">
+  <ion-fab-button>
+    <ion-icon name="arrow-back-outline"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
 <ion-content>
-  <ion-card>
+  <ion-card class="card-center">
     <ion-card-header>Agregar Ticket</ion-card-header>
     <ion-card-content>
       <form
@@ -10,7 +15,6 @@
         (ngSubmit)="sendTicket()"
       >
         <ion-item>
-          <ion-label>Issue</ion-label>
           <ion-textarea
             class="form-control"
             placeholder="Issue"
@@ -19,17 +23,14 @@
         </ion-item>
 
         <ion-item>
-          <ion-label>Seccion</ion-label>
           <ion-input
             class="form-control"
             placeholder="section"
             formControlName="section"
           ></ion-input>
         </ion-item>
-        <button ion-button type="submit" block>Enviar</button>
+        <ion-button ion-button type="submit" style="margin:10px">Enviar</ion-button>
       </form>
     </ion-card-content>
   </ion-card>
-  <button ion-button block (click)="dismiss()">Cerrar</button>
-  <button ion-button block (click)="dismiss()">Cerrar</button>
 </ion-content>
