--- a/src/app/pages/forum/forum-detail/forum-detail.component.html
+++ b/src/app/pages/forum/forum-detail/forum-detail.component.html
@@ -1,29 +1,37 @@
-<button class="btn" (click)="dismiss()">Atras</button>
-<ion-card>
-  <ion-card-header>{{ thread.title }}</ion-card-header>
-  <ion-card-content>
-    <ion-list>
+<ion-fab vertical="top" horizontal="start" slot="absolute" (click)="dismiss()">
+  <ion-fab-button>
+    <ion-icon name="arrow-back-outline"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
+<div
+  style="
+    display: flex;
+    justify-content: center;
+  "
+>
+  <ion-card>
+    <ion-card-header horizontal="center">{{ thread.title }}</ion-card-header>
+    <ion-card-content>
       <ion-item>
-        <ion-label>{{ thread.description }}</ion-label>
+        <ion-label>
+          <h4>{{ thread.description }}</h4>
+          <p>{{ thread.userName }}</p>
+        </ion-label>
       </ion-item>
-      <ion-item>
-        <ion-label>{{ thread.userName }}</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>{{ thread.userId }}</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>{{ thread._id }}</ion-label>
-      </ion-item>
-    </ion-list>
-  </ion-card-content>
-</ion-card>
-
-<ion-list>
-  <ion-item *ngFor="let entry of entrys">
-    <ion-label>{{ entry.message }}</ion-label>
-  </ion-item>
-</ion-list>
+    </ion-card-content>
+  </ion-card>
+</div>
+<ion-content [scrollEvents]="true">
+  <ion-list>
+    <ion-item *ngFor="let entry of entrys">
+      <ion-icon slot="start" ios="person-outline" md="person-sharp"></ion-icon>
+      <ion-label>
+        <h2>{{ entry.message }}</h2>
+        <p>{{ entry.userName }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
 
 <form
   class="form-horizontal form-material"
@@ -33,12 +41,13 @@
   (ngSubmit)="sendEntry()"
 >
   <ion-item>
-    <ion-label>Mensaje</ion-label>
     <ion-input
       class="form-control"
-      placeholder="Message"
+      placeholder="Respuesta"
       formControlName="message"
     ></ion-input>
+    <ion-button class="ion-align-self-center" ion-button type="submit" block>
+      <ion-icon name="caret-forward-outline"></ion-icon>
+    </ion-button>
   </ion-item>
-  <button ion-button type="submit" block>Enviar</button>
 </form>
