--- a/src/app/pages/forum/thread-form/thread-form.component.html
+++ b/src/app/pages/forum/thread-form/thread-form.component.html
@@ -1,6 +1,11 @@
+<ion-fab vertical="top" horizontal="start" slot="absolute" (click)="dismiss()">
+  <ion-fab-button>
+    <ion-icon name="arrow-back-outline"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
 <ion-content>
-  <ion-card>
-    <ion-card-header>Agregar Thread</ion-card-header>
+  <ion-card class="card-center">
+    <ion-card-header>Agregar Debate</ion-card-header>
     <ion-card-content>
       <form
         id="loginform"
@@ -9,7 +14,6 @@
         (ngSubmit)="sendThread()"
       >
         <ion-item>
-          <ion-label>Titulo</ion-label>
           <ion-input
             class="form-control"
             placeholder="Title"
@@ -18,16 +22,14 @@
         </ion-item>
 
         <ion-item>
-          <ion-label>Titulo</ion-label>
           <ion-input
             class="form-control"
             placeholder="Description"
             formControlName="description"
           ></ion-input>
         </ion-item>
-        <button ion-button type="submit" block>Enviar</button>
+        <ion-button ion-button type="submit" style="margin:10px">Enviar</ion-button>
       </form>
     </ion-card-content>
   </ion-card>
-  <button ion-button block (click)="dismiss()">Cerrar</button>
 </ion-content>
