--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,5 +1,6 @@
+
   <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
+    <ion-menu contentId="main-content" type="overlay" menuId="primeContent">
       <ion-content>
         <ion-list id="inbox-list">
           <ion-list-header>Inbox</ion-list-header>
@@ -14,5 +15,13 @@
         </ion-list>
       </ion-content>
     </ion-menu>
+    <ion-buttons>
+      <ion-button (click)="toggleMenu()">
+        <ion-icon name="chevron-forward-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-router-outlet id="main-content"></ion-router-outlet>
+
   </ion-split-pane>
+
+
