--- a/src/app/pages/vocabulary/vocabulary.component.html
+++ b/src/app/pages/vocabulary/vocabulary.component.html
@@ -1,1 +1,25 @@
-<p>vocabulary works!</p>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Vocabulary</ion-card-title>
+      <ion-route url="/learn/vocabulary/category" component="Agregar Categoria"></ion-route>
+      <ion-route url="/learn/Vocabulary/words" component="Agregar Palabra"></ion-route>
+      <ion-card-subtitle>Lista de Palabras</ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-list>
+        <ion-item
+          *ngFor="let word of words"
+        >
+        <ion-label>
+          <h2>{{ word.name }}</h2>
+          <p>{{ word.mening }}</p>
+          <p>{{ word.category }}</p>
+        </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+
+  </ion-card>
+</ion-content>
