--- a/src/app/pages/vocabulary/vocabulary.component.html
+++ b/src/app/pages/vocabulary/vocabulary.component.html
@@ -14,7 +14,7 @@
         >
         <ion-label>
           <h2>{{ word.name }}</h2>
-          <p>{{ word.mening }}</p>
+          <p>{{ word.meaning }}</p>
           <p>{{ word.category }}</p>
         </ion-label>
         </ion-item>
