--- a/src/app/pages/vocabulary/words/words.component.html
+++ b/src/app/pages/vocabulary/words/words.component.html
@@ -11,7 +11,7 @@
         <ion-item>
           <ion-input
             class="form-control"
-            placeholder="Name"
+            placeholder="Name Animal"
             formControlName="name"
           ></ion-input>
         </ion-item>
