--- a/src/app/pages/vocabulary/vocabulary.component.html
+++ b/src/app/pages/vocabulary/vocabulary.component.html
@@ -2,9 +2,8 @@
   <ion-card>
     <ion-card-header>
       <ion-card-title>Vocabulary</ion-card-title>
-      <ion-route url="/learn/vocabulary/category" component="Agregar Categoria"></ion-route>
-      <ion-route url="/learn/Vocabulary/words" component="Agregar Palabra"></ion-route>
-      <ion-card-subtitle>Lista de Palabras</ion-card-subtitle>
+    
+      <ion-card-subtitle>Words List</ion-card-subtitle>
     </ion-card-header>
 
     <ion-card-content>
@@ -20,6 +19,22 @@
         </ion-item>
       </ion-list>
     </ion-card-content>
+    <div class="agregar-botones">
+
+    <a
+      class="btn btn-primary btn-vocabulary p-2 m-3"
+      routerLink="/learn/vocabulary/category"
+      role="button"
+      >Agregar Categoria</a
+    >
+    --
+    <a
+      class="btn btn-primary btn-vocabulary p-2 m-3"
+      routerLink="/learn/vocabulary/words"
+      role="button"
+      >Agregar Palabra</a
+    >
+    </div>
 
   </ion-card>
 </ion-content>
